tests/miniJava/neg/006459_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while true 0 ) { } } }
